tests/NormalTests/paczka1/fuzzy1/78738922.err
Error in line 1: cSeLjXdbx A434 84,1
Error in line 6: cSeLjXdbx S450 34,4
Error in line 7: cSeLjXdbx A465 5,0
Error in line 12: xnSno A465 95,0
Error in line 29: AsPRUrXOE A465 22,0
Error in line 36: xnSno S450 8,2
